package model.dungeon.scoring;

public class ScoringFactory {
}
