package model.dungeon.scoring;

public class ScoringLife {
}
