package model.dungeon.scoring;

public abstract class ScoringParameter {

}
